[package]
name = "mill"
version = "0.1.0"
authors = ["Tom Godkin <tomgodkin@pm.me>"]
edition = "2021"
license = "Unlicense OR MIT"
description = "An OCI-compliant container runtime."

[dependencies]

mill_core = { path = "../mill_core", version = "0.1.0" }
structopt = "0.3"
termcolor = "1.1"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
snafu = "0.6"

[dev-dependencies]

tempfile = "3"
serial_test = "0.9"
